fix: minimize page padding on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 :root {
     --max-width: 100vw;
+    --body-padding: 3rem;
+    --body-gap: 3rem;
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 231, 235, 240;
     --background-end-rgb: 241, 245, 250;
@@ -14,6 +16,13 @@
 
     html {
         color-scheme: dark;
+    }
+}
+
+@media (width <= 800px) {
+    :root {
+        --body-padding: 2rem 0;
+        --body-gap: 2rem;
     }
 }
 
@@ -34,8 +43,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     max-width: 800px;
-    padding: 3rem !important;
-    gap: 3rem;
+    padding: var(--body-padding) !important;
+    gap: var(--body-gap);
     margin: auto;
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(
